docs UI upgrades ✨

--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -1,12 +1,9 @@
-import Promise from "@/components/elements/Promise";
-import CustomAlert from "@/components/elements/CustomAlert";
+import Promise from '@/components/elements/Promise';
+import CustomAlert from '@/components/elements/CustomAlert';
 
 # Quickstart: How to use this guide
 
-<Promise>
-  This page outlines the high-level contents of this guide and how we recommend
-  you navigate it.
-</Promise>
+<Promise>This page outlines the high-level contents of this guide and how we recommend you navigate it.</Promise>
 
 ## What exactly is this guide?
 
@@ -15,22 +12,30 @@ Most resources and knowledge about alignment are currently scattered (and it’s
 **This guide is a curated central hub of information and resources for alignment.** We keep every page short for you, with options to dig deeper.
 
 1. [Why alignment urgently matters](/why-alignment):
-   - What exactly is alignment? Does it matter right now?
-   - Responses to FAQs and common misconceptions
+    - What exactly is alignment? Does it matter right now?
+    - Responses to FAQs and common misconceptions
 2. [Overview of current efforts](/overview-current-efforts):
-   - What are the current main efforts from prominent organizations?
-   - A concise birds-eye view of their research directions and mission/philosophy
-3. <i className="text-gray-700/70">(coming soon)</i> Research Directions:
-   - For the current main efforts, we expand on:
-     - Up-to-date summary of recent work
-     - Top resources to learn more
-     - Next step opportunities (”todos”)
-4. <i className="text-gray-700/70">(coming soon)</i> Next steps:
-   - How can you contribute?
-   - Concrete directions to take action, including a list of open problems to work on
+    - What are the current main efforts from prominent organizations?
+    - A concise birds-eye view of their research directions and mission/philosophy
+3. <i className='text-gray-700/70'>(coming soon)</i> Research Directions: - For the current main efforts, we expand on: - Up-to-date summary of recent work - Top resources to learn more - Next step opportunities (”todos”)
+4. <i className='text-gray-700/70'>(coming soon)</i> Next steps: - How can you contribute? - Concrete directions to take action, including a list of open problems to work on
 
-<CustomAlert variant="primary" className="mt-4" title="This guide is still under development" description={<div>We're working to upload the rest of the writing and resources onto this guide <b>within the next week.</b> Stay tuned!</div>} />
+<CustomAlert
+    variant='primary'
+    className='mt-4'
+    title='This guide is still under development'
+    description={
+        <div>
+            We're working to upload the rest of the writing and resources onto this guide <b>within the next week.</b> Stay tuned!
+        </div>
+    }
+/>
 
 ## How should you navigate this guide?
 
-<CustomAlert variant="warning" title="This section is incomplete" variant="warning" description="As we fill out the rest of the guide, we'll be updating this section with which pages you should start with and visit next (based on what you're looking for)." />
+<CustomAlert
+    variant='warning'
+    title='This section is incomplete'
+    variant='warning'
+    description="As we fill out the rest of the guide, we'll be updating this section with which pages you should start with and visit next (based on what you're looking for)."
+/>
