--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -1,5 +1,6 @@
 import Promise from '@/components/elements/Promise';
 import CustomAlert from '@/components/elements/CustomAlert';
+import SectionCard from '@/components/elements/SectionCard';
 
 # Quickstart: How to use this guide
 
@@ -10,6 +11,21 @@ import CustomAlert from '@/components/elements/CustomAlert';
 Most resources and knowledge about alignment are currently scattered (and it’s hard to know what’s important).
 
 **This guide is a curated central hub of information and resources for alignment.** We keep every page short for you, with options to dig deeper.
+
+<div className='flex flex-wrap space-x-5'>
+<SectionCard number='01' title='Why alignment urgently matters'>
+- What exactly is alignment? Does it matter right now?
+
+-   Responses to FAQs and common misconceptions
+
+</SectionCard>
+<SectionCard number='02' title='Overview of current efforts'>
+- What are the current main efforts from prominent organizations?
+
+-   A concise birds-eye view of their research directions and mission/philosophy
+
+</SectionCard>
+</div>
 
 1. [Why alignment urgently matters](/why-alignment):
     - What exactly is alignment? Does it matter right now?
