more on quickstart section card

--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -12,7 +12,7 @@ Most resources and knowledge about alignment are currently scattered (and it’s
 
 **This guide is a curated central hub of information and resources for alignment.** We keep every page short for you, with options to dig deeper.
 
-<div className='flex flex-wrap space-x-5'>
+<div className='grid-cols-2 space-x-5 pt-8'>
 <SectionCard number='01' title='Why alignment urgently matters'>
 - What exactly is alignment? Does it matter right now?
 
