--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -12,7 +12,7 @@ Most resources and knowledge about alignment are currently scattered (and it’s
 
 **This guide is a curated central hub of information and resources for alignment.** We keep every page short for you, with options to dig deeper.
 
-<div className='grid-cols-2 space-x-5 pt-8'>
+<div className='grid lg:grid-cols-2 gap-x-5 gap-y-5 pt-8'>
 <SectionCard number='01' title='Why alignment urgently matters'>
 - What exactly is alignment? Does it matter right now?
 
@@ -23,6 +23,18 @@ Most resources and knowledge about alignment are currently scattered (and it’s
 - What are the current main efforts from prominent organizations?
 
 -   A concise birds-eye view of their research directions and mission/philosophy
+
+</SectionCard>
+<SectionCard number='03' title='Research Directions'>
+- For the current main efforts, we touch on:
+    - Up-to-date summary of recent work 
+    - Top resources to learn more 
+    - Next step opportunities (”todos”)
+
+</SectionCard>
+<SectionCard number='04' title='Next steps'>
+- How can you contribute? 
+- Concrete directions to take action, including a list of open problems to work on
 
 </SectionCard>
 </div>
