--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -13,40 +13,31 @@ Most resources and knowledge about alignment are currently scattered (and it’s
 **This guide is a curated central hub of information and resources for alignment.** We keep every page short for you, with options to dig deeper.
 
 <div className='grid lg:grid-cols-2 gap-x-5 gap-y-5 pt-8'>
-<SectionCard number='01' title='Why alignment urgently matters'>
+<SectionCard number='01' title='Why alignment urgently matters' href='/why-alignment'>
 - What exactly is alignment? Does it matter right now?
 
 -   Responses to FAQs and common misconceptions
 
 </SectionCard>
-<SectionCard number='02' title='Overview of current efforts'>
+<SectionCard number='02' title='Overview of current efforts' href='/overview-current-efforts'>
 - What are the current main efforts from prominent organizations?
 
 -   A concise birds-eye view of their research directions and mission/philosophy
 
 </SectionCard>
-<SectionCard number='03' title='Research Directions'>
+<SectionCard number='03' title='Research Directions' href=''>
 - For the current main efforts, we touch on:
     - Up-to-date summary of recent work 
     - Top resources to learn more 
     - Next step opportunities (”todos”)
 
 </SectionCard>
-<SectionCard number='04' title='Next steps'>
+<SectionCard number='04' title='Next steps' href=''>
 - How can you contribute? 
 - Concrete directions to take action, including a list of open problems to work on
 
 </SectionCard>
 </div>
-
-1. [Why alignment urgently matters](/why-alignment):
-    - What exactly is alignment? Does it matter right now?
-    - Responses to FAQs and common misconceptions
-2. [Overview of current efforts](/overview-current-efforts):
-    - What are the current main efforts from prominent organizations?
-    - A concise birds-eye view of their research directions and mission/philosophy
-3. <i className='text-gray-700/70'>(coming soon)</i> Research Directions: - For the current main efforts, we expand on: - Up-to-date summary of recent work - Top resources to learn more - Next step opportunities (”todos”)
-4. <i className='text-gray-700/70'>(coming soon)</i> Next steps: - How can you contribute? - Concrete directions to take action, including a list of open problems to work on
 
 <CustomAlert
     variant='primary'
