quickstart cards done

--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -14,28 +14,30 @@ Most resources and knowledge about alignment are currently scattered (and it’s
 
 <div className='grid lg:grid-cols-2 gap-x-5 gap-y-5 pt-8'>
 <SectionCard number='01' title='Why alignment urgently matters' href='/why-alignment'>
-- What exactly is alignment? Does it matter right now?
-
--   Responses to FAQs and common misconceptions
-
+    <ul className="compact-quickstart-list">
+        <li>What exactly is alignment? Does it matter right now?</li>
+        <li>Responses to FAQs and common misconceptions</li>
+    </ul>
 </SectionCard>
 <SectionCard number='02' title='Overview of current efforts' href='/overview-current-efforts'>
-- What are the current main efforts from prominent organizations?
-
--   A concise birds-eye view of their research directions and mission/philosophy
-
+    <ul className="compact-quickstart-list">
+        <li>What are the current main efforts from prominent organizations?</li>
+        <li>A concise birds-eye view of their research directions and mission/philosophy</li>
+    </ul>
 </SectionCard>
 <SectionCard number='03' title='Research Directions' href=''>
-- For the current main efforts, we touch on:
-    - Up-to-date summary of recent work 
-    - Top resources to learn more 
-    - Next step opportunities (”todos”)
-
+<div>For the current main efforts, we touch on:</div>
+    <ul className="compact-quickstart-list">
+        <li>Up-to-date summary of recent work</li>
+        <li>Top resources to learn more</li>
+        <li>Next step opportunities (”todos”)</li>
+    </ul>
 </SectionCard>
 <SectionCard number='04' title='Next steps' href=''>
-- How can you contribute? 
-- Concrete directions to take action, including a list of open problems to work on
-
+    <ul className="compact-quickstart-list">
+        <li>How can you contribute?</li>
+        <li>Concrete directions to take action, including a list of open problems to work on</li>
+    </ul>
 </SectionCard>
 </div>
 
