homepage temp done

--- a/src/pages/why-alignment/why-this-is-urgent.mdx
+++ b/src/pages/why-alignment/why-this-is-urgent.mdx
@@ -16,7 +16,8 @@ import LinkBadge from '@/components/elements/LinkBadge';
             1. When it comes to history, we think in straight lines.
             2. The trajectory of very recent history often tells a distorted story.
             3. Our own experience makes us stubborn old men about the future.
-            [The Artificial Intelligence Revolution: Part 1 - Wait But Why](https://waitbutwhy.com/2015/01/artificial-intelligence-revolution-1.html)
+
+            Read more: [The Artificial Intelligence Revolution: Part 1 - Wait But Why](https://waitbutwhy.com/2015/01/artificial-intelligence-revolution-1.html)
         </Toggle>
 
 </Toggle>
