--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -33,7 +33,7 @@ Most resources and knowledge about alignment are currently scattered (and it’s
         <li>Next step opportunities (”todos”)</li>
     </ul>
 </SectionCard>
-<SectionCard number='04' title='Next steps' href=''>
+<SectionCard number='04' title='Concrete next steps' href=''>
     <ul className="compact-quickstart-list">
         <li>How can you contribute?</li>
         <li>Concrete directions to take action, including a list of open problems to work on</li>
