--- a/src/pages/overview-current-efforts.mdx
+++ b/src/pages/overview-current-efforts.mdx
@@ -5,6 +5,7 @@ import {
   AccordionItem,
   AccordionTrigger,
 } from "@/components/ui/accordion";
+import LinkBadge from "@/components/elements/LinkBadge";
 
 # Overview of current efforts
 
@@ -101,7 +102,7 @@ at these companies and know where to go to read more.**
       </AccordionTrigger>
       <AccordionContent>
         - **[Center for AI Safety (CAIS)](https://www.safe.ai/work)**: CAIS researches ways to reduce societal-scale risks caused by AI and provides guidance to policymakers on effective strategies for governing AI deployment and ensuring its safe integration into society.
-        - **[Machine Intelligence Research Institute (MIRI)](https://intelligence.org/)**: Focused on doing research to make sure superintelligent models have a positive impact on humanity. They’ve done work on Corrigibility, i.e., AI systems that assist and do not resist corrective interventions (note that by default, AI systems are not corrigible (see **[Why is alignment difficult](https://www.notion.so/Why-is-alignment-difficult-385f815223004c148a1e6879afe10bcf?pvs=21)**).
+        - **[Machine Intelligence Research Institute (MIRI)](https://intelligence.org/)**: Focused on doing research to make sure superintelligent models have a positive impact on humanity. They’ve done work on Corrigibility, i.e., AI systems that assist and do not resist corrective interventions (note that by default, AI systems are not corrigible: <LinkBadge link="/why-alignment/why-alignment-is-difficult" text="Why is alignment difficult?" />).
         - **[US AI Safety Institute](https://www.nist.gov/aisi)**: Led by Paul Christiano, the institute works on advancing research and measurement science for AI safety, conducting safety evaluations of models and systems, and developing guidelines for evaluations and risk mitigations, including content authentication and the detection of synthetic content.
       </AccordionContent>
     </AccordionItem>
