--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -6,13 +6,9 @@ import SectionCard from '@/components/elements/SectionCard';
 
 <Promise>This page outlines the high-level contents of this guide and how we recommend you navigate it.</Promise>
 
-## What exactly is this guide?
+## Table of Contents
 
-Most resources and knowledge about alignment are currently scattered (and it’s hard to know what’s important).
-
-**This guide is a curated central hub of information and resources for alignment.** We keep every page short for you, with options to dig deeper.
-
-<div className='grid lg:grid-cols-2 gap-x-5 gap-y-5 pt-8'>
+<div className='grid lg:grid-cols-2 gap-x-5 gap-y-5'>
 <SectionCard number='01' title='Why alignment urgently matters' href='/why-alignment'>
     <ul className="compact-quickstart-list">
         <li>What exactly is alignment? Does it matter right now?</li>
@@ -40,17 +36,6 @@ Most resources and knowledge about alignment are currently scattered (and it’s
     </ul>
 </SectionCard>
 </div>
-
-<CustomAlert
-    variant='primary'
-    className='mt-4'
-    title='This guide is still under development'
-    description={
-        <div>
-            We're working to upload the rest of the writing and resources onto this guide <b>within the next week.</b> Stay tuned!
-        </div>
-    }
-/>
 
 ## How should you navigate this guide?
 
