--- a/src/pages/why-alignment/default-dangerous.mdx
+++ b/src/pages/why-alignment/default-dangerous.mdx
@@ -12,7 +12,9 @@ Intelligence is the single quality we have an advantage over all other animals. 
 
 But how is this different than machines we’ve already built that are better than us at tasks?
 
-## Why should a superintelligent AI concern you any more than the fact that mechanical vehicles can go faster than a human can run?
+## Consequences
+
+<p><span className="highlight">Why should a superintelligent AI concern you any more than the fact that mechanical vehicles can go faster than a human can run?</span></p>
 
 The fundamental difference between superintelligent AI and mechanical vehicles is the **generality** of their capabilities.
 
@@ -22,7 +24,9 @@ Superintelligence, on the other hand, will have **extremely broad** intelligence
 
 _Okay, even if that’s true, how would a chatbot take over the world?_
 
-## How would an AI actually gain or wield power if it exists only as a computer program?
+## Abilities
+
+<p><span className="highlight">How would an AI actually gain or wield power if it exists only as a computer program?</span></p>
 
 <Toggle
     title={
@@ -43,7 +47,9 @@ _Okay, even if that’s true, how would a chatbot take over the world?_
 
 _But why should we expect it to use its power to the detriment of humankind?_
 
-## Wouldn’t a superintelligent AI be smart enough to use its power responsibly?
+## Destructiveness
+
+<p><span className="highlight">Wouldn’t a superintelligent AI be smart enough to use its power responsibly?</span></p>
 
 In short, **no**. An AI system will use its power in a way to maximize its goals _regardless of the nature of its goals_ (and as we’ve seen, it is difficult to choose good goals). <b className="highlight">A superintelligent AI would simply be better at doing so.</b>
 
